shorterm fix to spacing on 404

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -520,6 +520,7 @@
   text-align: center;
 }
 #errorSlogan {
+  margin-left: 35px;
   margin-top: 15px;
   letter-spacing: 12px;
   text-align: center;
